[package]
name = "tetra-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
eyre = "0.6.12"
indexmap = { version = "2.5.0", features = ["serde"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde = "1.0.210"
serde_json = "1.0.128"
