[package]
name = "tetra-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
# git version because: https://github.com/emilk/egui/pull/5208
eframe = { version = "0.29.1", git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
egui = { version = "0.29.1", git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
egui_extras = { version = "0.29.1", features = [
    "all_loaders",
], git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
eyre = "0.6.12"
indexmap = { version = "2.5.0", features = ["serde"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-hjson = "1.0.0"
