[package]
name = "tetra-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.5.0"
chumsky = "1.0.0-alpha.7"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
# git version because: https://github.com/emilk/egui/pull/5208
eframe = { version = "0.29.1", git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
egui = { version = "0.29.1", git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
egui_extras = { version = "0.29.1", features = [
    "all_loaders",
], git = "https://github.com/rustbasic/egui", rev = "d51c7bcaab8659f8aee3f4dceb0196c86fd80468" }
eyre = "0.6.12"
fnv = "1.0.7"
hex_color = { version = "3.0.0", features = ["serde"] }
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
mlua = { version = "0.10.0", features = [
    "luau",
    "vendored",
    "macros",
    "error-send",
    "send",
] }
parking_lot = "0.12.3"
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde-hjson = "1.1.0"
serde_path_to_error = "0.1.16"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev.package.backtrace]
opt-level = 3
